buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '2.2.0.RELEASE'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

group 'com.shaposhnikov'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

javafx {
    version = "15.0.1"
    modules = [ 'javafx.controls', 'javafx.swing' ]
}

repositories {
    mavenCentral()
    mavenLocal()
    jcenter()

    maven {
        url "http://www.sarxos.pl/repo/maven2"
    }

    flatDir {
        // Here need specify path to directory with OpenCV
        dirs "lib"
    }
}

dependencies {
    implementation (
        [":opencv-320:"]
    )
    implementation (
        ['org.springframework.boot:spring-boot-starter-thymeleaf:2.1.8.RELEASE'],
        ['org.springframework.boot:spring-boot-devtools:2.1.8.RELEASE'],
        ['org.springframework.boot:spring-boot-starter-security:2.1.8.RELEASE'],
        ['org.springframework.boot:spring-boot-starter-websocket:2.1.8.RELEASE'],
        ['org.springframework.boot:spring-boot-starter-data-mongodb:2.1.8.RELEASE'],
        ['org.springframework.boot:spring-boot-starter-undertow:2.1.8.RELEASE'],
        ['javax.servlet:jstl:1.2'],
        //[group: 'com.github.sarxos', name: 'webcam-capture', version: '0.3.10'],
        [group: 'com.github.sarxos', name: 'webcam-capture-driver-ipcam', version: '0.3.12'],
        [group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'],
        [group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'],
        [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.8'],

        [group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'],
        [group: 'org.apache.commons', name: 'commons-collections4', version: '4.0']
    )
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

war {
    baseName = 'FaceRecognizer'
}
